[package]
name = "aeloc"
description = "A spatial data oracle for the EVM"
repository = "https://github.com/azzaouit/aeloc"
version = "0.1.0"
edition = "2021"
license = "MIT"
keywords = ["gis", "maps", "openstreetmaps"]

[dependencies]
clap = {version="4.5.4", features=["env", "derive"]}
ethers = "2.0.14"
ethers-core = "2.0.14"
ethers-providers = "2.0.14"
ethers-signers = "2.0.14"
tokio = {version = "1.36.0", features = ["rt", "macros", "rt-multi-thread"] }
log = "0.4.21"
env_logger = "0.11.3"
hex = "0.4.3"
reqwest = {version = "0.12.2", features = ["json"]}
serde = {version="1.0.197", features=["derive"]}
serde-aux = "4.5.0"
serde_json = "1.0.115"
sqlx = { version = "0.7", features = [ "runtime-tokio", "sqlite"] }
rpassword = "7.3.1"
eyre = "0.6.12"
dirs = "5.0.1"
osm-rs = "0.1.0"
